Make sure the main menu covers the javascript kite pattern buttons.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -26,7 +26,7 @@ html {
     position: fixed;
     top: 9px;
     left: 0;
-    z-index: 2;
+    z-index: 5;
 
     .navbar-nav {
         border-radius: .25rem;
